--- a/TravelBook/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/TravelBook/Base.lproj/Main.storyboard
@@ -1,127 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="per-3f-KnM">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="f9G-vo-8gk">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Map view configurations" minToolsVersion="14.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14799.2"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--List View Controller-->
-        <scene sceneID="y35-92-vVA">
+        <scene sceneID="gC0-WV-GDm">
             <objects>
-                <viewController id="Lt9-Lk-uWG" customClass="ListViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EkK-kg-HyV">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                <viewController id="EqG-1x-aeQ" customClass="ListViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hXU-Y6-vIm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d9v-1Q-icW">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IFX-0a-AoK">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="nc2-28-MqP"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="nc2-28-MqP" firstAttribute="bottom" secondItem="d9v-1Q-icW" secondAttribute="bottom" id="4Kv-la-44w"/>
-                            <constraint firstItem="nc2-28-MqP" firstAttribute="trailing" secondItem="d9v-1Q-icW" secondAttribute="trailing" id="lAF-pt-yoO"/>
-                            <constraint firstItem="d9v-1Q-icW" firstAttribute="leading" secondItem="nc2-28-MqP" secondAttribute="leading" id="wz9-kX-Xqq"/>
-                            <constraint firstItem="d9v-1Q-icW" firstAttribute="top" secondItem="nc2-28-MqP" secondAttribute="top" id="yCr-NQ-Fwf"/>
+                            <constraint firstItem="zqS-KG-kc4" firstAttribute="bottom" secondItem="IFX-0a-AoK" secondAttribute="bottom" id="2xQ-yF-ySq"/>
+                            <constraint firstItem="IFX-0a-AoK" firstAttribute="top" secondItem="zqS-KG-kc4" secondAttribute="top" id="ZJK-wL-cZH"/>
+                            <constraint firstItem="IFX-0a-AoK" firstAttribute="leading" secondItem="zqS-KG-kc4" secondAttribute="leading" id="dol-wm-PbK"/>
+                            <constraint firstItem="zqS-KG-kc4" firstAttribute="trailing" secondItem="IFX-0a-AoK" secondAttribute="trailing" id="jSe-Mu-Wbb"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="zqS-KG-kc4"/>
                     </view>
-                    <navigationItem key="navigationItem" id="QnM-uI-tLK"/>
+                    <navigationItem key="navigationItem" id="znF-hI-6SQ"/>
                     <connections>
-                        <outlet property="tableView" destination="d9v-1Q-icW" id="5AX-0c-Ess"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="toViewController" id="iou-L1-zMZ"/>
+                        <outlet property="tableView" destination="IFX-0a-AoK" id="Tn0-Q7-uNj"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toViewController" id="YRm-J3-u9K"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VvD-Vi-ttQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eT3-Y3-gmW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="252.67175572519082" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="218.84057971014494" y="138.61607142857142"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ywn-cs-Vw2">
-                                <rect key="frame" x="74" y="136" width="245" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k4V-DL-u75">
-                                <rect key="frame" x="74" y="196" width="245" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-E4-LJU">
-                                <rect key="frame" x="0.0" y="268" width="393" height="488"/>
-                                <standardMapConfiguration key="preferredConfiguration"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="M52-vM-qKO">
+                                <rect key="frame" x="0.0" y="290" width="414" height="524"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYv-B1-Ibg">
-                                <rect key="frame" x="166" y="764" width="61" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ktq-je-sdE">
+                                <rect key="frame" x="42" y="147" width="330" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YKY-JM-rux">
+                                <rect key="frame" x="42" y="203" width="330" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRy-P6-3da">
+                                <rect key="frame" x="160" y="826" width="94" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Mme-Tj-fXL"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
                                 <connections>
-                                    <action selector="saveButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FdS-I7-Qdw"/>
+                                    <action selector="saveButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P7T-gh-lkz"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="k4V-DL-u75" firstAttribute="top" secondItem="Ywn-cs-Vw2" secondAttribute="bottom" constant="26" id="85c-mq-fgT"/>
-                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9PP-ma-DjO"/>
-                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="BMP-Um-PfI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PYv-B1-Ibg" secondAttribute="bottom" constant="19" id="MY7-5X-UUh"/>
-                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="trailing" secondItem="k4V-DL-u75" secondAttribute="trailing" id="NeW-GZ-cPc"/>
-                            <constraint firstItem="PYv-B1-Ibg" firstAttribute="top" secondItem="gGa-E4-LJU" secondAttribute="bottom" constant="8" id="Svz-MY-HLG"/>
-                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="74" id="j6X-re-oi9"/>
-                            <constraint firstItem="k4V-DL-u75" firstAttribute="centerX" secondItem="gGa-E4-LJU" secondAttribute="centerX" id="jEm-mq-izx"/>
-                            <constraint firstItem="gGa-E4-LJU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mbj-Or-cOb"/>
-                            <constraint firstItem="gGa-E4-LJU" firstAttribute="top" secondItem="k4V-DL-u75" secondAttribute="bottom" constant="38" id="pRF-Dn-cjN"/>
-                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="leading" secondItem="k4V-DL-u75" secondAttribute="leading" id="qqY-1a-G1g"/>
-                            <constraint firstItem="gGa-E4-LJU" firstAttribute="centerX" secondItem="PYv-B1-Ibg" secondAttribute="centerX" id="wR4-g5-fEd"/>
+                            <constraint firstItem="M52-vM-qKO" firstAttribute="centerX" secondItem="eRy-P6-3da" secondAttribute="centerX" id="7bE-eY-GVr"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="eRy-P6-3da" secondAttribute="bottom" constant="-4" id="942-0l-Qjw"/>
+                            <constraint firstItem="ktq-je-sdE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="59" id="C2u-VW-S8S"/>
+                            <constraint firstItem="M52-vM-qKO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GNm-QG-Uef"/>
+                            <constraint firstItem="ktq-je-sdE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kz2-YK-Ohu"/>
+                            <constraint firstItem="ktq-je-sdE" firstAttribute="trailing" secondItem="YKY-JM-rux" secondAttribute="trailing" id="LcG-wm-EGB"/>
+                            <constraint firstItem="eRy-P6-3da" firstAttribute="top" secondItem="M52-vM-qKO" secondAttribute="bottom" constant="12" id="Rex-OC-ms6"/>
+                            <constraint firstItem="M52-vM-qKO" firstAttribute="top" secondItem="YKY-JM-rux" secondAttribute="bottom" constant="53" id="Ria-0P-2sM"/>
+                            <constraint firstItem="YKY-JM-rux" firstAttribute="centerX" secondItem="M52-vM-qKO" secondAttribute="centerX" id="Xd7-EL-Jzb"/>
+                            <constraint firstItem="eRy-P6-3da" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="160" id="i9N-by-Cwb"/>
+                            <constraint firstItem="ktq-je-sdE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="mah-fu-AE8"/>
+                            <constraint firstItem="YKY-JM-rux" firstAttribute="top" secondItem="ktq-je-sdE" secondAttribute="bottom" constant="22" id="oYb-Rt-C6u"/>
+                            <constraint firstItem="ktq-je-sdE" firstAttribute="leading" secondItem="YKY-JM-rux" secondAttribute="leading" id="sTY-aj-sZZ"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="zmZ-ri-hxC"/>
                     <connections>
-                        <outlet property="commentText" destination="k4V-DL-u75" id="3Ll-8I-WT2"/>
-                        <outlet property="mapView" destination="gGa-E4-LJU" id="pIA-kZ-Q1z"/>
-                        <outlet property="nameText" destination="Ywn-cs-Vw2" id="cFr-VD-544"/>
+                        <outlet property="commentText" destination="YKY-JM-rux" id="GaT-us-I2b"/>
+                        <outlet property="mapView" destination="M52-vM-qKO" id="gL6-1C-93q"/>
+                        <outlet property="nameText" destination="ktq-je-sdE" id="GQ4-k9-wPS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1061.8320610687022" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="AC5-wm-bwz">
+        <scene sceneID="nTX-76-Hne">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="per-3f-KnM" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f9G-vo-8gk" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bww-gg-WtB">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wgS-Ut-MfD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Lt9-Lk-uWG" kind="relationship" relationship="rootViewController" id="6rP-T8-ydh"/>
+                        <segue destination="EqG-1x-aeQ" kind="relationship" relationship="rootViewController" id="JcB-Eh-nXh"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qqn-Qy-Hf3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="POC-Kj-Uyl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-674.04580152671758" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="-691.304347826087" y="138.61607142857142"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
