--- a/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
+++ b/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
@@ -160,14 +160,99 @@
                     <view key="view" contentMode="scaleToFill" id="OQx-XT-lWv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aLr-JH-AV8">
+                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="374" id="Gf4-EW-CNP" customClass="FeedCell" customModule="InstaCloneFirebase" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="374"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gf4-EW-CNP" id="ZrQ-w1-3fw">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="374"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tFQ-mt-rpC">
+                                                    <rect key="frame" x="40" y="36" width="312" height="250"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="useremail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KkR-e1-iu1">
+                                                    <rect key="frame" x="40" y="0.0" width="312" height="28"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="312" id="0DT-gq-uuH"/>
+                                                        <constraint firstAttribute="height" constant="28" id="SnM-ci-6jv"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFN-Y2-GNv">
+                                                    <rect key="frame" x="40" y="294" width="312" height="49"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7DC-YY-2I8">
+                                                    <rect key="frame" x="29" y="328" width="55" height="35"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="Like"/>
+                                                    <connections>
+                                                        <action selector="likeButtonClicked:" destination="Gf4-EW-CNP" eventType="touchUpInside" id="hX9-Vu-SHb"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kVA-oM-htu">
+                                                    <rect key="frame" x="322" y="334" width="30" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="xib-Rs-4KT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7DC-YY-2I8" firstAttribute="top" secondItem="tFQ-mt-rpC" secondAttribute="bottom" constant="42" id="2Gb-HI-yFQ"/>
+                                                <constraint firstItem="tFQ-mt-rpC" firstAttribute="trailing" secondItem="RFN-Y2-GNv" secondAttribute="trailing" id="3mA-xY-zY7"/>
+                                                <constraint firstItem="KkR-e1-iu1" firstAttribute="centerX" secondItem="ZrQ-w1-3fw" secondAttribute="centerX" id="7rw-2M-1oq"/>
+                                                <constraint firstItem="7DC-YY-2I8" firstAttribute="bottom" secondItem="ZrQ-w1-3fw" secondAttribute="bottomMargin" id="FTF-65-kLD"/>
+                                                <constraint firstItem="tFQ-mt-rpC" firstAttribute="top" secondItem="KkR-e1-iu1" secondAttribute="bottom" constant="8" id="HTY-gf-ZlJ"/>
+                                                <constraint firstItem="RFN-Y2-GNv" firstAttribute="top" secondItem="tFQ-mt-rpC" secondAttribute="bottom" constant="8" id="Ngv-js-JOU"/>
+                                                <constraint firstItem="kVA-oM-htu" firstAttribute="top" secondItem="tFQ-mt-rpC" secondAttribute="bottom" constant="48" id="QfB-XO-99W"/>
+                                                <constraint firstItem="tFQ-mt-rpC" firstAttribute="leading" secondItem="RFN-Y2-GNv" secondAttribute="leading" id="TT2-o0-pHL"/>
+                                                <constraint firstItem="KkR-e1-iu1" firstAttribute="trailing" secondItem="tFQ-mt-rpC" secondAttribute="trailing" id="bgo-Ep-a0w"/>
+                                                <constraint firstItem="KkR-e1-iu1" firstAttribute="top" secondItem="ZrQ-w1-3fw" secondAttribute="topMargin" constant="-11" id="ea0-Zq-qLx"/>
+                                                <constraint firstItem="RFN-Y2-GNv" firstAttribute="trailing" secondItem="kVA-oM-htu" secondAttribute="trailing" id="fCy-aq-zCQ"/>
+                                                <constraint firstItem="7DC-YY-2I8" firstAttribute="leading" secondItem="ZrQ-w1-3fw" secondAttribute="leadingMargin" constant="9" id="mKz-bA-T3M"/>
+                                                <constraint firstItem="KkR-e1-iu1" firstAttribute="leading" secondItem="tFQ-mt-rpC" secondAttribute="leading" id="p3P-bk-j9b"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="RFN-Y2-GNv" secondAttribute="bottom" constant="20" id="zSP-t4-NVT"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="RFN-Y2-GNv" id="oKJ-q5-V7S"/>
+                                            <outlet property="likeLabel" destination="kVA-oM-htu" id="e7K-Sa-XTz"/>
+                                            <outlet property="userEmailLabel" destination="KkR-e1-iu1" id="Bmj-dr-5J3"/>
+                                            <outlet property="userImageView" destination="tFQ-mt-rpC" id="0oF-Xr-aIz"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="3vQ-WD-fX4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aLr-JH-AV8" firstAttribute="bottom" secondItem="3vQ-WD-fX4" secondAttribute="bottom" id="bzm-hD-9UA"/>
+                            <constraint firstItem="aLr-JH-AV8" firstAttribute="top" secondItem="3vQ-WD-fX4" secondAttribute="top" id="fqJ-yF-9r7"/>
+                            <constraint firstItem="aLr-JH-AV8" firstAttribute="leading" secondItem="3vQ-WD-fX4" secondAttribute="leading" id="gf2-D3-e1R"/>
+                            <constraint firstItem="aLr-JH-AV8" firstAttribute="centerX" secondItem="OQx-XT-lWv" secondAttribute="centerX" id="l5s-9V-Al4"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Feed" image="f.cursive.circle" catalog="system" id="XOu-NR-RiK"/>
+                    <connections>
+                        <outlet property="tableView" destination="aLr-JH-AV8" id="K65-p3-P5N"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IyH-Vu-9jQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-712" y="-584"/>
+            <point key="canvasLocation" x="-712.2137404580152" y="-584.50704225352115"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hDd-vZ-5EB">
